fix: delete card and visible button in mobile

--- a/src/components/RemoveCardButton/RemoveCardButton.css
+++ b/src/components/RemoveCardButton/RemoveCardButton.css
@@ -9,3 +9,9 @@
   background: #f9f9f9 url("../../images/remove-icon.svg") no-repeat 50% 50%;
   visibility: hidden;
 }
+
+@media screen and (max-width: 800px) {
+  .remove-card-button {
+    visibility: visible;
+  }
+}
